fixed overflow issue

--- a/compiled/styles.css
+++ b/compiled/styles.css
@@ -682,7 +682,7 @@ a {
 }
 .skills--div {
   rotate: -3deg;
-  margin-top: 10rem;
+  margin-top: 8rem;
   display: flex;
   background-color: var(--navy);
   width: 100%;
@@ -795,7 +795,7 @@ a {
   background: linear-gradient(33deg, rgb(102, 252, 241) 50%, rgb(31, 40, 51) 50%);
 }
 .theme .orange {
-  background: linear-gradient(33deg, rgb(255, 125, 26) 50%, hsl(25deg, 100%, 94%) 50%);
+  background: linear-gradient(33deg, rgb(255, 125, 26) 50%, hsl(25, 100%, 94%) 50%);
 }
 
 .grid--1x2 {
@@ -1239,6 +1239,7 @@ a {
 }
 .education--section {
   margin-bottom: 3.5rem;
+  overflow: hidden;
 }
 
 .education {
