--- a/scss/components/_education.scss
+++ b/scss/components/_education.scss
@@ -1,5 +1,6 @@
 .education--section {
   margin-bottom: 3.5rem;
+  overflow: hidden;
 }
 
 .education {
