--- a/scss/components/_skills.scss
+++ b/scss/components/_skills.scss
@@ -5,7 +5,7 @@
 .skills--div {
   // overflow: hidden;
   rotate: -3deg;
-  margin-top: 10rem;
+  margin-top: 8rem;
   display: flex;
   background-color: var(--navy);
   width: 100%;
